tests/purs/failing/1175.out
Error found:
in module [33mX[0m
at tests/purs/failing/1175.purs:11:11 - 11:12 (line 11, column 11 - line 11, column 12)

  Could not match type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m
  with type
  [33m        [0m
  [33m  String[0m
  [33m        [0m

while checking that type [33mInt[0m
  is at least as general as type [33mString[0m
while checking that expression [33m1[0m
  has type [33mString[0m
in value declaration [33mf[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

